Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22241

LIMIT ROWS EXAMINED prematurely triggers during optimization

    XMLWordPrintable

Details

    • Can result in unexpected behaviour
    • Q4/2025 Server Maintenance

    Description

      Reproducible on 10.4-10.5, with InnoDB/MyIsam.

      CREATE TABLE t1 (a int PRIMARY KEY, b varchar(1));
      INSERT INTO t1 VALUES (262,'8');
       
      --source include/restart_mysqld.inc
       
      SELECT 1 FROM t1 
      WHERE (1 IN (SELECT 8 UNION SELECT 5)) OR t1.a = 140 
      LIMIT ROWS EXAMINED 5;
      

      10.4 c1bdf62452139e9310d3234

      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #5  0x00007fa726afb535 in __GI_abort () at abort.c:79
      #6  0x00007fa726afb40f in __assert_fail_base (fmt=0x7fa726c5dee0 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x563cb630d218 "0", file=0x563cb630cefc "/10.4/sql/protocol.cc", line=617, function=<optimized out>) at assert.c:92
      #7  0x00007fa726b09102 in __GI___assert_fail (assertion=0x563cb630d218 "0", file=0x563cb630cefc "/10.4/sql/protocol.cc", line=617, function=0x563cb630d890 <Protocol::end_statement()::__PRETTY_FUNCTION__> "void Protocol::end_statement()") at assert.c:101
      #8  0x0000563cb5532d3d in Protocol::end_statement (this=0x7fa710001318) at /10.4/sql/protocol.cc:617
      #9  0x0000563cb5658624 in dispatch_command (command=COM_QUERY, thd=0x7fa710000d50, packet=0x7fa710008751 "SELECT 1 FROM t1 \nWHERE (1 IN (SELECT 8 UNION SELECT 5)) OR t1.a = 140 \nLIMIT ROWS EXAMINED 5", packet_length=93, is_com_multi=false, is_next_command=false) at /10.4/sql/sql_parse.cc:2433
      #10 0x0000563cb5654bc3 in do_command (thd=0x7fa710000d50) at /10.4/sql/sql_parse.cc:1359
      #11 0x0000563cb57dbb8c in do_handle_one_connection (connect=0x563cb8900590) at /10.4/sql/sql_connect.cc:1412
      #12 0x0000563cb57db8db in handle_one_connection (arg=0x563cb8900590) at /10.4/sql/sql_connect.cc:1316
      #13 0x0000563cb61c4ca6 in pfs_spawn_thread (arg=0x563cb884e220) at /10.4/storage/perfschema/pfs.cc:1869
      #14 0x00007fa7275a1fa3 in start_thread (arg=<optimized out>) at pthread_create.c:486
      #15 0x00007fa726bd24cf in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      
      

      Attachments

        Issue Links

          Activity

            People

              oleg.smirnov Oleg Smirnov
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              10 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 2d Original Estimate - 2d
                  2d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 5d 2.5h
                  5d 2.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.