MDEV-22241: Assertion `0' failed in Protocol::end_statement after query with LIMIT ROWS EXAMINED

When the query is aborted because the rows examined are greater than what was specified by
the user during the optimization phase, make sure to send an empty result set with a warning
that the execution of the query is incomplete.